--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -7,7 +7,7 @@ body {
     Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: #fafafa;
+  background-color: #d0d0d0;
   color: #212121;
   line-height: 1.5;
 }
@@ -26,4 +26,35 @@ body {
 
 .search__title {
   font-size: 30px;
+}
+
+.country-list {
+  list-style: none;
+}
+
+.country-item {
+  display: flex;
+  align-items: center;
+}
+
+.country-flag {
+  width: 60px;
+  height: 40px;
+}
+
+.country-name {
+  font-weight: 600;
+  font-size: 30px;
+  padding-left: 10px;
+}
+
+.country-detail {
+  font-weight: 400;
+  font-size: 24px;
+  padding-left: 10px;
+}
+
+.country-title {
+  display: flex;
+  align-items: center;
 }
